CNCS Dev 12/src/objects/Application3__c.object
<CustomObject>
    <description>SF-424</description>
    <fields>
        <fullName>Active_MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant1__c</fullName>
        <label>Applicant</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Delinquent_on_any_Federal_Debt__c</fullName>
        <inlineHelpText>Is the Applicant Delinquent on any Federal Debt?</inlineHelpText>
        <label>Applicant Delinquent on any Federal Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Identifier__c</fullName>
        <description>Applicant Identifier</description>
        <inlineHelpText>Please enter Applicant Identifier</inlineHelpText>
        <label>Applicant Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code_and_Phone_Number__c</fullName>
        <label>Area Code and Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_Project_Cities_Coutn__c</fullName>
        <inlineHelpText>Areas Affected by Project (Cities, Coutnies, States, etc.)</inlineHelpText>
        <label>Areas Affected by Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;By signing this application, I certify (1) to the statements contained in the list of certifications** and (2) that the statements herein are true, complete and accurate to the best of my knowledge.  I also provide the required assurances** and agree to comply with any resulting terms if I accept an award.  I am aware that any false, fictitious, or fraudulent statements or claims may subject me to criminal, civil, or administrative penalties.  (U.S. Code, Title 218, Section 1001)&quot;</defaultValue>
        <label>Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Advisory_Name_and_Addresses__c</fullName>
        <label>Community Advisory Name and Addresses</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition_Identification_Number__c</fullName>
        <label>Competition Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_State__c</fullName>
        <description>Date Received by State</description>
        <inlineHelpText>Date Received by State</inlineHelpText>
        <label>Date Received by State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descriptive_Title_of_Applicant_s_Project__c</fullName>
        <label>Descriptive Title of Applicant&apos;s Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emaill__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Taxpayer_Number_EIN_TIN__c</fullName>
        <inlineHelpText>Employer/Taxpayer Number (EIN/TIN)</inlineHelpText>
        <label>Employer/Taxpayer Number (EIN/TIN)</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fax_Number1__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identifier__c</fullName>
        <description>Federal Award Identifier</description>
        <inlineHelpText>Please enter Federal Award Identifier</inlineHelpText>
        <label>Federal Award Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Entity_Identifier__c</fullName>
        <description>Federal Entity Identifier</description>
        <inlineHelpText>Please enter Federal Entity Identifier</inlineHelpText>
        <label>Federal Entity Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Namee__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives__c</fullName>
        <label>Focus Areas and Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Economic Opportunity - Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans and Military Familes - Veterans and Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - Other Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship - At-Risk Ecosystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educations - School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Services - Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building - Capacity Building and Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Community Priorities - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - K-12 Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_Certificiation_of_Non_Profit_Status__c</fullName>
        <label>IRS Certificiation of Non-Profit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Yes_provide_your_explination_here__c</fullName>
        <label>If &quot;Yes&quot;, provide your explanation here</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Namee__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Legal Name</description>
        <inlineHelpText>Please enter Legal Name</inlineHelpText>
        <label>Legal Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIddle_Namee__c</fullName>
        <label>MIddle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Indirect_Cost_Agreement__c</fullName>
        <label>Negotiated Indirect Cost Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Unduplicated_Volunteers__c</fullName>
        <label>Number of Unduplicated Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <label>Number of Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <picklist>
            <controllingField>Type_of_Application__c</controllingField>
            <picklistValues>
                <fullName>A. Increase Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Decrease Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Increase Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Decrease Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Capability__c</fullName>
        <label>Organization Capability</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organization_DUNS__c</fullName>
        <inlineHelpText>Please enter Organization DUNS</inlineHelpText>
        <label>Organization DUNS</label>
        <length>13</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Organizational_Affiliation__c</fullName>
        <label>Organizational Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Chart__c</fullName>
        <label>Organizational Chart</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other2__c</fullName>
        <label>Other</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefixx__c</fullName>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Income__c</fullName>
        <label>Program Income</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Project__c</fullName>
        <label>Program/Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Directors_Job_Description__c</fullName>
        <label>Project Directors Job Description</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_and_Development__c</fullName>
        <label>Recruitment and Development</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_by_State_Under_Executive_Order__c</fullName>
        <inlineHelpText>Is Application Subject to Review by State Under Executive Order 12372 Process?</inlineHelpText>
        <label>Review by State Under Executive Order</label>
        <picklist>
            <picklistValues>
                <fullName>a.This application was made available to the State under the Executive Order 12372 Process for review on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b.Program is subject to E.O. 12372 but has not been selected by the State for review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Program is not covered by E.O. 12372.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State2__c</fullName>
        <label>State</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Application_Identifier__c</fullName>
        <description>State Application Identifier</description>
        <inlineHelpText>Please enter State Application Identifier</inlineHelpText>
        <label>State Application Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station_Type__c</fullName>
        <label>Station Type</label>
        <picklist>
            <picklistValues>
                <fullName>Museums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Head Start Pre-Schools (education focused)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing homes/Convalescent Centers/Hospices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Educational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Community and Ecnomic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Health Care Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Social Service Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parks/Recreational Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police/Law Enforcement Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Scool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Congregate Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Private Elementary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Private Secondary Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation Centers (excluding sheltered workshops)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Long-Term Care Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Organizations (Lions, Elks, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheltered Workshops/Centers (vocationally focused)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Pregnancy/Teen Parenting Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrift Shops/Coops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total number of faith-based Stations/Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional Shelters/Centers (e.g. homeless, abused, other short-term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umbrella Environmental Orgs (EASI, Wildlife Society)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational Centers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_1__c</fullName>
        <label>Street Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Line_2__c</fullName>
        <label>Street Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengthen_Communities__c</fullName>
        <label>Strengthen Communities</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffixx__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL__c</fullName>
        <formula>Federal__c + Applicant1__c + Local__c + State2__c + Other2__c + Program_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Numbr__c</fullName>
        <label>Telephone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titlee__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Applicant_2__c</fullName>
        <label>Type of Applicant 2</label>
        <picklist>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>